--- a/HelloWorld/HelloWorld/MainPage.xaml
+++ b/HelloWorld/HelloWorld/MainPage.xaml
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+             ios:Page.UseSafeArea="True"
              x:Class="HelloWorld.MainPage">
 
-    <StackLayout BackgroundColor="Blue"
-                 Margin="10,20">
-        <Label x:Name="greetingLabel" Text="Hello Xamarin world!" />
+    <StackLayout BackgroundColor="AliceBlue"
+                 Margin="5">
+        <Label x:Name="greetingLabel" class="something something else" Text="Hello Xamarin world!" />
         <Entry x:Name="UserName"
                Placeholder="Write your name here" />
         <Button Text="Click Me"
